navbar alignment fixed (hopefully)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,6 +140,8 @@ body {
 .navbar-nav {
     width: 400px;
     height: 65px;
+    justify-content: space-between;
+    margin: auto;
 }
 
 .navbar-collapse {
